# tasklet-project

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  main.py  pyproject.toml  render.yaml  skills-lock.json
data/: schema.sql  seed.sql
frontend/: index.html  package-lock.json  package.json  vercel.json  vite.config.js
frontend/public/: _redirects
frontend/src/: App.jsx  api.js
frontend/src/components/: Chat.jsx  Header.jsx  Metrics.jsx  TicketTable.jsx
scripts/: init_db.py
src/: __init__.py  agent.py  api.py  app.py  cli.py  conversation.py  db.py  models.py  prompts.py  query_service.py  ticket_service.py  tools.py
tests/: conftest.py  test_agent.py  test_conversation.py  test_query_service.py  test_ticket_service.py  test_tool_dispatch.py
